--- a/app/src/main/res/layout/activity_otp__login.xml
+++ b/app/src/main/res/layout/activity_otp__login.xml
@@ -84,7 +84,8 @@
             android:id="@+id/progressBar_otp_login"
             style="?android:attr/progressBarStyle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:visibility="invisible"/>
     </LinearLayout>
 
 </RelativeLayout>
