--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,5 +12,5 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_centerInParent="true"
-        app:srcCompat="@drawable/vm_logo" />
+        app:srcCompat="@drawable/swaroj_logo" />
 </RelativeLayout>
