--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,9 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Registration">
+    tools:context=".Registration"
+    >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_margin="24dp"
+        android:layout_centerInParent="true"
+        android:id="@+id/ll1_reg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/editText_name_reg"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginBottom="12dp"
+
+            android:background="@drawable/custom_edittext_1"
+            android:drawableLeft="@drawable/left_icon_name"
+
+            android:ems="10"
+            android:fontFamily="sans-serif-condensed"
+            android:hint="@string/enter_name"
+            android:inputType="textPersonName"
+
+
+
+            android:padding="5dp"
+            android:textColor="#000000"
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/editText_email_reg"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginBottom="12dp"
+
+            android:background="@drawable/custom_edittext_1"
+            android:drawableLeft="@drawable/left_icon_email"
+
+            android:ems="10"
+            android:fontFamily="sans-serif-condensed"
+            android:hint="@string/enter_email"
+            android:inputType="textEmailAddress"
+
+
+            android:padding="5dp"
+            android:textColor="#000000"
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/editText_address_reg"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginBottom="12dp"
+            android:background="@drawable/custom_edittext_1"
+            android:drawableLeft="@drawable/left_icon_address"
+
+            android:ems="10"
+            android:fontFamily="sans-serif-condensed"
+            android:hint="@string/enter_address"
+            android:inputType="textPostalAddress"
+
+
+            android:padding="5dp"
+            android:textColor="#000000"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="24dp"
+        >
+
+        <Button
+            android:id="@+id/button_submit_reg"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/custom_button_1"
+            android:elevation="12dp"
+
+            android:fontFamily="sans-serif-black"
+            android:text="@string/submit_details"
+            android:textColor="#ffffff"
+            android:textSize="22sp" /></LinearLayout>
+</RelativeLayout>
