--- a/app/src/main/res/menu/custom_menu.xml
+++ b/app/src/main/res/menu/custom_menu.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/privacy_menu"
+        android:title="Privacy Policy" />
     <item android:title="Log out"
         android:id="@+id/logout_menu"
         />
