--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,16 @@
     >
 
     <ImageView
+        android:id="@+id/imageview_main"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_centerInParent="true"
-        app:srcCompat="@drawable/swaroj_logo" />
+        app:srcCompat="@drawable/vm_logo" />
+    <TextView
+        android:id="@+id/presents_main"
+        android:layout_below="@id/imageview_main"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="presents"></TextView>
 </RelativeLayout>
