--- a/app/src/main/res/layout/activity_near__me.xml
+++ b/app/src/main/res/layout/activity_near__me.xml
@@ -11,41 +11,39 @@
         android:id="@+id/ll1_near"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:layout_marginBottom="12dp">
 
         <TextView
+
             android:id="@+id/textView_count_near"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="TextView"
-            android:textSize="60sp"
+            android:text=""
+            android:textSize="20sp"
             android:textAlignment="center"
             />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ll2_near"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_below="@id/ll1_near"
-        >
-
         <TextView
             android:id="@+id/textView_coordinate_near"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textSize="40sp"
+            android:text=""
+            android:textSize="18sp"
             android:textAlignment="center"/>
     </LinearLayout>
+
 
     <Button
         android:layout_centerInParent="true"
         android:id="@+id/button_refresh_near"
-        android:layout_above="@id/ll1_near"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="refresh" />
+        android:text="@string/refresh"
+        android:background="@drawable/custom_button_1"
+        android:textColor="#ffffff"
+        android:elevation="8dp"
+        android:textSize="20sp"
+        android:padding="12dp"
+        android:layout_below="@id/ll1_near"/>
 </RelativeLayout>
