--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,11 +14,16 @@
         android:layout_height="200dp"
         android:layout_centerInParent="true"
         app:srcCompat="@drawable/vm_logo" />
+
     <TextView
         android:id="@+id/presents_main"
-        android:layout_below="@id/imageview_main"
-        android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="presents"></TextView>
+        android:layout_below="@id/imageview_main"
+        android:layout_centerInParent="true"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:text="VISION MAGITECH \npresents"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="18sp"></TextView>
 </RelativeLayout>
