--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -31,7 +31,7 @@
         android:text="@string/something_s_not_right_restart_app"
         android:textAlignment="center"
         android:textSize="16sp"
-        android:textColor="@color/colorPrimary"/>
+        android:textColor="@color/colorAccent"/>
     <TextView
         android:id="@+id/textView_safeornot_dash"
         android:layout_width="match_parent"
@@ -60,8 +60,8 @@
             app:srcCompat="@drawable/ic_person_pin_black_24dp" />-->
 
         <LinearLayout
-            android:layout_gravity="center"
-            android:gravity="center"
+
+            android:layout_margin="8dp"
             android:id="@+id/ll1_ll1_dash"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -73,11 +73,11 @@
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:fontFamily="sans-serif-medium"
+                
                 android:letterSpacing="0.1"
                 android:text="Name"
 
-                android:textAlignment="center"
+
                 android:textAllCaps="true"
                 android:textColor="#ffffff"
                 android:textSize="20sp" />
@@ -87,11 +87,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:fontFamily="sans-serif-medium"
+                
                 android:letterSpacing="0.1"
                 android:text="Email"
 
-                android:textAlignment="center"
+
                 android:textAllCaps="true"
                 android:textColor="#ffffff"
                 android:textSize="14sp" />
@@ -101,11 +101,11 @@
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:fontFamily="sans-serif-medium"
+                
                 android:letterSpacing="0.1"
                 android:text="Type"
 
-                android:textAlignment="center"
+
                 android:textAllCaps="true"
                 android:textColor="#EEEEEE"
                 android:textSize="14sp" />
@@ -119,7 +119,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_below="@id/ll0_info_dash">
+android:layout_alignParentBottom="true">
 
 
         <LinearLayout
@@ -185,6 +185,7 @@
                 android:background="@drawable/custom_button_1" />
 
             <Button
+                android:visibility="gone"
                 android:drawableTop="@drawable/ic_business_center_black_24dp"
                 android:drawableTint="#ffffff"
                 android:padding="12dp"
@@ -201,19 +202,6 @@
 
         </LinearLayout>
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="A social distancing platform"
-        android:layout_alignParentBottom="true"
-
-        android:layout_centerInParent="true"
-        android:textColor="#000000"
-        android:textSize="14sp"
-        android:layout_marginBottom="68dp"
-        />
 
 
 </RelativeLayout>
