--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,26 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-
-    >
-
-    <ImageView
-        android:id="@+id/imageview_main"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_centerInParent="true"
-        app:srcCompat="@drawable/vm_logo" />
+    android:theme="@style/AppTheme"
+    tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/presents_main"
+        android:id="@+id/logo_memory"
+        android:text="@string/app_name"
+        android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/imageview_main"
+        android:textStyle="bold"
+        android:textSize="66sp"
+        android:textColor="@color/colorPrimaryDark"
+        android:layout_margin="12dp"
+        android:elevation="8dp"
+        android:fontFamily="@font/jacques_francois_shadow"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/swaroj_2020_all_rights_reserved"
         android:layout_centerInParent="true"
-        android:fontFamily="sans-serif-condensed-medium"
-        android:text="VISION MAGITECH \npresents"
-        android:textAlignment="center"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="12dp"
         android:textColor="#000000"
-        android:textSize="18sp"></TextView>
+        >
+
+    </TextView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/logo_memory"
+        android:text="@string/a_social_distancing_platform"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="12dp"
+        android:textColor="#000000"
+        android:textSize="20dp"
+        >
+    </TextView>
 </RelativeLayout>
