--- a/app/src/main/res/layout/activity_memory.xml
+++ b/app/src/main/res/layout/activity_memory.xml
@@ -6,14 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".Memory">
 
-    <ImageView
+    <TextView
         android:id="@+id/logo_memory"
+        android:text="@string/app_name"
         android:layout_centerInParent="true"
-        android:layout_width="match_parent"
-        android:layout_height="256dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textSize="80sp"
         android:layout_margin="12dp"
         android:elevation="8dp"
-        app:srcCompat="@drawable/swaroj_logo" />
+         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
