--- a/app/src/main/res/layout/activity_otp__register.xml
+++ b/app/src/main/res/layout/activity_otp__register.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context=".OTP_Register">
     <LinearLayout
         android:id="@+id/ll1_otp_reg"
@@ -24,7 +25,7 @@
             android:drawableLeft="@drawable/left_icon_phone"
 
             android:ems="10"
-            android:fontFamily="sans-serif-condensed"
+
             android:hint="@string/prephoneno"
             android:inputType="text|phone"
 
@@ -45,7 +46,7 @@
 
 
             android:ems="10"
-            android:fontFamily="sans-serif-condensed"
+
             android:hint="@string/enter_otp"
             android:inputType="text|phone"
 
@@ -63,7 +64,7 @@
             android:background="@drawable/custom_button_1_outline"
             android:elevation="12dp"
 
-            android:fontFamily="sans-serif-black"
+
             android:text="@string/get_otp"
             android:textColor="#f44336"
             android:textSize="22sp" />
@@ -80,7 +81,7 @@
 
     <LinearLayout
         android:id="@+id/ll2_otp_reg"
-       android:layout_alignParentBottom="true"
+       android:layout_centerInParent="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -93,7 +94,7 @@
             android:background="@drawable/custom_button_1"
             android:elevation="12dp"
 
-            android:fontFamily="sans-serif-black"
+
             android:text="@string/register_migrant"
             android:textColor="#ffffff"
             android:textSize="22sp"
@@ -108,7 +109,7 @@
             android:elevation="12dp"
 
 
-            android:fontFamily="sans-serif-black"
+
             android:text="@string/register_local"
             android:textColor="#ffffff"
             android:textSize="22sp"
