--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,10 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#5c6bc0</item>
-        <item name="colorPrimaryDark">#e65100</item>
+        <item name="colorPrimary">#b71c1c</item>
+        <item name="colorPrimaryDark">#e53935</item>
         <item name="colorAccent">#ff1744</item>
+        <item name="android:fontFamily">@font/fredoka_one</item>
     </style>
 
 </resources>
